Add missing functionality to team add i.e. adding members to team whenever creating it
