# ib_iam/interactors/storage_interfaces/dtos.py
@@ -9,6 +9,11 @@ class TeamNameAndDescriptionDTO:
 
 
 @dataclass
+class AddTeamParametersDTO(TeamNameAndDescriptionDTO):
+    member_ids: List[str]
+
+
+@dataclass
 class PaginationDTO:
     limit: int
     offset: int
