# ib_iam/views/add_team/api_wrapper.py
@@ -2,7 +2,7 @@ from django_swagger_utils.drf_server.utils.decorator.interface_decorator \
     import validate_decorator
 from .validator_class import ValidatorClass
 from ib_iam.interactors.add_team_interactor import AddTeamInteractor
-from ib_iam.interactors.storage_interfaces.dtos import TeamNameAndDescriptionDTO
+from ib_iam.interactors.storage_interfaces.dtos import AddTeamParametersDTO
 from ib_iam.presenters.team_presenter_implementation import TeamPresenterImplementation
 from ib_iam.storages.team_storage_implementation import TeamStorageImplementation
 
@@ -14,19 +14,21 @@ def api_wrapper(*args, **kwargs):
     request_data = kwargs["request_data"]
     name = request_data["name"]
     description = request_data["description"]
+    member_ids = request_data["member_ids"]
 
     storage = TeamStorageImplementation()
     presenter = TeamPresenterImplementation()
     interactor = AddTeamInteractor(storage=storage)
 
-    team_name_and_description_dto = TeamNameAndDescriptionDTO(
+    add_team_parameters_dto = AddTeamParametersDTO(
         name=name,
-        description=description
+        description=description,
+        member_ids=member_ids
     )
 
     response_data = interactor.add_team_wrapper(
         user_id=user_id,
-        team_name_and_description_dto=team_name_and_description_dto,
+        add_team_parameters_dto=add_team_parameters_dto,
         presenter=presenter
     )
     return response_data
